k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meet
spec:
  selector:
    name: meet
  ports:
  - port: 80
    targetPort: 80
