k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meet
spec:
  rules:
    - host: meet.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: meet
                port:
                  number: 80
